[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/LevelDemo.gd" type="Script" id=1]
[ext_resource path="res://Scenes/MapDemo.tscn" type="PackedScene" id=2]
[ext_resource path="res://Resources/Untitled.png" type="Texture" id=3]

[node name="Root" type="Node2D"]
script = ExtResource( 1 )

[node name="MapDemo" parent="." instance=ExtResource( 2 )]
position = Vector2( 607.975, 166.677 )

[node name="UI" type="Panel" parent="."]
margin_left = 1.5874
margin_top = 654.009
margin_right = 1281.59
margin_bottom = 727.009
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="UI"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Start" type="Button" parent="UI"]
margin_left = 11.3521
margin_top = 16.3975
margin_right = 107.352
margin_bottom = 44.3975
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Reset" type="Button" parent="UI"]
margin_left = 130.206
margin_top = 16.8369
margin_right = 228.206
margin_bottom = 44.8369
text = "Reset"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Status" type="Label" parent="UI"]
margin_left = 1052.3
margin_top = 14.9882
margin_right = 1255.3
margin_bottom = 43.9882
text = "Turn: 2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Untitled" type="Sprite" parent="UI"]
position = Vector2( 1092.84, -163.102 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 150, 50, 640, 550 )

[node name="Label" type="Label" parent="UI/Untitled"]
margin_left = -320.362
margin_top = -316.357
margin_right = -257.362
margin_bottom = -302.357
rect_scale = Vector2( 2, 2 )
text = "End State: (Numbers are health)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="UI"]
margin_left = 32.5449
margin_top = -131.257
margin_right = 754.545
margin_bottom = -15.2566
text = "Super early prototype
1) Click on a friendly unit will show you the possible move to make, and click on that tile will make the move
(Current system doesnt allow move and attack on the same tile so, will change later)
(If you are trying to attack an enemy tile, make sure to not click on them directly but the tile underneath)
2) Clicking on an enemy me show you their move in this turn
3) Game is over when turn number drops to -1, no win stage programmed but the intended ending is on the right
4) To skip a turn for a unit, just dont give it any order"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="msg" from="MapDemo" to="." method="_on_MapDemo_msg"]
[connection signal="turn_finished" from="MapDemo" to="." method="_on_MapDemo_turn_finished"]
[connection signal="pressed" from="UI/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="UI/Reset" to="." method="_on_Button2_pressed"]
